Ex1, clean version

--- a/ex1 - Hello world/Makefile
+++ b/ex1 - Hello world/Makefile
@@ -1,7 +1,7 @@
 ###### CONFIGURATION ######
 
 ### List of applications to be build
-APPLICATIONS = ex01b
+APPLICATIONS = ex01a ex01b
 
 ### Note: to override the search path for the xeno-config script, use "make XENO=..."
 
